# tekki

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  README_EN.md  Setup.bat  Setup.sh  conanfile.py  my_trans.sh  run_translation.bat  run_translation.sh  translate_kajiya.py
.claude/: settings.local.json
.claude/agents/: cpp-test-engineer.md
conan/profiles/: linux-gcc-debug  linux-gcc-release  windows-msvc-debug  windows-msvc-release
data/config/: viewer.json
docs/: ASSET_IMPLEMENTATION_SUMMARY.md  ASSET_SYSTEM.md  BACKEND_IMPLEMENTATION_NOTES.md  BUILD_FIX_PLAN.md  DEPENDENCIES.md  DEVELOPMENT.md  GPU_MODULES.md  GPU_PROFILER_TRANSLATION.md  TESTING.md  TRANSLATION.md  TRANSLATION_COMPLETE.md  TRANSLATION_QUICKSTART.md  TRANSLATION_TOOL.md  m1_detailed_design.md  tekki_translation_plan.md
include/: imgui_impl_glfw.h  ngx_dlss.h  ngx_dlss_naming.md
include/kajiya_asset/: mesh.h
include/tekki/: gpu_profiler.h  tekki.hpp
include/tekki/ash_imgui/: lib.h
include/tekki/asset/: GpuImage.h  TexParams.h  asset.hpp  asset_pipeline.h  gltf_importer.h  image.h  mesh.h
include/tekki/backend/: backend.hpp  bytes.h  chunky_list.h  device.h  dynamic_constants.h  error.h  file.h  image.h  lib.h  pipeline_cache.h  render_backend.h  rust_shader_compiler.h  shader_compiler.h  spirv_reflect_helper.h  transient_resource_cache.h  vk_sync.h
include/tekki/core/: Result.h  Result.hpp  common.h  common.hpp  config.h  error.hpp  log.h  mmap.h  result.hpp  time.h
include/tekki/gpu_allocator/: README.md  gpu_allocator.h
include/tekki/gpu_profiler/: README.md  gpu_profiler.h  shared.h  vulkan_profiler.h
include/tekki/kajiya_asset_pipe/: lib.h
include/tekki/kajiya_imgui/: imgui_backend.h  lib.h
include/tekki/kajiya_simple/: input.h  lib.h  main_loop.h
include/tekki/ngx_dlss/: lib.h
include/tekki/render_graph/: Buffer.h  Image.h  PassApi.h  RenderGraph.h  Resource.h  Temporal.h  buffer.h  desc_convert.h  execution_params.h  graph.h  high_level.h  image_ops.h  imageops.h  lib.h  pass_api.h  pass_builder.h  render_graph.h  renderer.h  resource.h  resource_registry.h  simple_render_pass.h  temporal.h  types.h
include/tekki/renderer/: camera.h  (+20 more)
samples/: CMakeLists.txt
samples/hello/: main.cpp
samples/view/: main.cpp  opt.cpp
shaders/: README.md
src/: CMakeLists.txt  tekki.hpp
src/ash_imgui/: lib.cpp
src/asset/: asset.hpp  asset_pipeline.cpp  gltf_importer.cpp  gltf_loader.cpp  gltf_loader_process.cpp  image.cpp  image_process.cpp  mesh.cpp  serialization.cpp  tangent_calc.cpp  test_asset_loading.cpp
src/backend/: CMakeLists.txt  backend.hpp  bytes.cpp  chunky_list.cpp  dynamic_constants.cpp  error.cpp  file.cpp  lib.cpp  pipeline_cache.cpp  rust_shader_compiler.cpp  shader_compiler.cpp  spirv_reflect_helper.cpp  transient_resource_cache.cpp
src/backend/vulkan/: allocator.cpp  barrier.cpp  buffer.cpp  buffer_builder.cpp  debug_utils.cpp  device.cpp  dlss.cpp  dynamic_constants.cpp  error.cpp  image.cpp  instance.cpp  mod.cpp  physical_device.cpp  pipeline_cache.cpp  profiler.cpp  ray_tracing.cpp  shader.cpp  surface.cpp  swapchain.cpp  transient_resource_cache.cpp
src/core/: common.hpp  config.cpp  config.h  error.hpp  log.cpp  log.h  mmap.cpp  time.cpp  time.hpp
src/gpu_allocator/: allocator.cpp  allocator_base.cpp  allocator_internal.h  gpu_allocator.cpp  result.cpp
src/gpu_allocator/allocator/: dedicated_block_allocator.cpp  free_list_allocator.cpp
src/gpu_allocator/vulkan/: allocator.cpp
src/gpu_profiler/: gpu_profiler.cpp  vulkan_profiler.cpp
src/gpu_profiler/backend/: vulkan.cpp
src/kajiya_asset/: mesh.cpp
src/kajiya_asset_pipe/: lib.cpp
src/kajiya_imgui/: imgui_backend.cpp  lib.cpp
src/kajiya_simple/: input.cpp  lib.cpp  main_loop.cpp
src/ngx_dlss/: lib.cpp
src/render_graph/: Graph.h  PassApi.h  PassBuilder.h  RenderGraph.cpp  RenderGraph.h  Resource.h  ResourceRegistry.h  Temporal.h  graph.cpp  high_level.cpp  image_ops.cpp  imageops.cpp  lib.cpp  pass_api.cpp  pass_builder.cpp  render_graph.cpp  renderer.cpp  resource.cpp  resource_registry.cpp  simple_render_pass.cpp  temporal.cpp
src/renderer/: bindless_descriptor_set.cpp  buffer_builder.cpp  camera.cpp  default_world_renderer.cpp  frame_desc.cpp  half_res.cpp  image_cache.cpp  image_lut.cpp  lib.cpp  logging.cpp  lut_renderers.cpp  math.cpp  mmap.cpp  prefix_scan.cpp  renderer.hpp  ui_renderer.cpp  world_render_passes.cpp  world_renderer.cpp  world_renderer_mmap_adapter.cpp
src/renderer/renderers/: deferred.cpp  dlss.cpp  dof.cpp  half_res.cpp  ibl.cpp  ircache.cpp  ircache.h  lighting.cpp  mod.cpp  motion_blur.cpp  post.cpp  post.h  prefix_scan.cpp  raster_meshes.cpp  reference.cpp  renderers.cpp  renderers.h  reprojection.cpp  rtdgi.cpp  rtr.cpp  shadow_denoise.cpp  shadow_denoise.h  shadows.cpp  sky.cpp  ssgi.cpp  taa.cpp  ussgi.cpp  wrc.cpp
src/renderer/renderers/old/: csgi.cpp  sdf.cpp
src/renderer/world/: WorldRenderer.cpp  WorldRenderer.h  world_render_passes.cpp
src/rg/: rg.hpp
src/rust_shader_builder/: main.cpp
src/rust_shaders/: atmosphere.cpp  blur.cpp  color.cpp  constants.cpp  copy_depth_to_r.cpp  extract_half_res_depth.cpp  rev_blur.cpp  sky.cpp
src/rust_shaders_shared/: camera.cpp  frame_constants.cpp  gbuffer.cpp  lib.cpp  mesh.cpp  raster_simple.cpp  render_overrides.cpp  ssgi.cpp  util.cpp  view_constants.cpp  view_ray.cpp
src/view/: keymap.cpp  main.cpp  misc.cpp
src/viewer/: main.cpp
tests/: CMakeLists.txt  README.md  test_main.cpp
tests/asset/: test_image.cpp  test_mesh.cpp
tests/backend/: test_bytes.cpp  test_chunky_list.cpp  test_dynamic_constants.cpp  test_file.cpp  test_transient_resource_cache.cpp
tests/core/: test_log.cpp  test_math.cpp  test_mmap.cpp  test_result.cpp
tests/render_graph/: test_graph.cpp  test_resource.cpp  test_temporal.cpp
tests/renderer/: test_buffer_builder.cpp  test_camera.cpp  test_half_res.cpp  test_math.cpp  test_world_renderer.cpp
tools/: CMakeLists.txt
tools/asset_baker/: main.cpp
tools/shader_builder/: main.cpp
(+88 files in other folders)
